Add view source link

--- a/xxtea/index.html
+++ b/xxtea/index.html
@@ -39,6 +39,7 @@
 			    <p class="lead">Quickly and simply encrypt some text in the browser using open source. Feel free to inspect the code to see how it works, including the xxtea encryption algorithm.</p>
 				<p>Type in a password/passphrase, then paste in the text you want to encrypt. Then press the Encrypt button and copy the ciphertext. To decrypt, leave the plaintext field empty, enter the ciphertext with the same original password, and click Decrypt.</p>
                 <p>(NOTES: This uses Corrected Block TEA (often referred to as <a href="https://en.wikipedia.org/wiki/XXTEA">XXTEA</a>), a simple to code cipher which is unencumbered by patents and can run on low power devices like Raspi. This entire website can be downloaded and run locally.)
+				<p><a href="https://github.com/tomosaigon/web-encrypt-text/tree/master/xxtea">View source</a></p>
 		</div></div>
 		<div class="container">
 		 <form>
