Use local js/css files to allow running completely static

--- a/xxtea/index.html
+++ b/xxtea/index.html
@@ -19,15 +19,11 @@
 				document.getElementById('plaintext').value = ptext
 			}
         </script>
-        <script
-              src="https://code.jquery.com/jquery-3.4.1.min.js"
-                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-                crossorigin="anonymous"></script>
-        <script async src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"/>
+        <script src="jquery-3.4.1.min.js"></script>
+        <script async src="bootstrap.min.js"></script>
+		<link rel="stylesheet" href="bootstrap.min.css"/>
+        <link rel="stylesheet" href="bootstrap.bundle.min.js"/>
         <style>
-body { font-family: 'Baloo 2', cursive; } 
 .jumbotron {
     background-color: #b1b1b1;
     color: white;
@@ -144,16 +140,6 @@ body { font-family: 'Baloo 2', cursive; }
   }
 }
         </style>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159869403-1"></script>
-        <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'UA-159869403-1');
-		</script>
     </head>
 
     <body>
