--- a/xxtea/index.html
+++ b/xxtea/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>tomosaigon.github.io web-encrypt-text demo</title>
         <meta charset="UTF-8">
+        <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
         <script src="xxtea.js" type="text/javascript"></script>
         <script type="text/javascript">
 			function encrypt() {
