--- a/xxtea/index.html
+++ b/xxtea/index.html
@@ -6,141 +6,27 @@
         <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
         <script src="xxtea.js" type="text/javascript"></script>
         <script type="text/javascript">
-			function encrypt() {
-				let ptext = document.getElementById('plaintext').value
-				let key = document.getElementById('key').value
-				let ctext = XXTEA.encryptToBase64(ptext, key)
-				document.getElementById('ciphertext').value = ctext
-			}
+            function encrypt(e) {
+                e.preventDefault()
+                let ptext = document.getElementById('plaintext').value
+                let key = document.getElementById('key').value
+                let ctext = XXTEA.encryptToBase64(ptext, key)
+                document.getElementById('ciphertext').value = ctext
+            }
 
-			function decrypt() {
-				let ctext = document.getElementById('ciphertext').value
-				let key = document.getElementById('key').value
-				let ptext = XXTEA.decryptFromBase64(ctext, key)
-				document.getElementById('plaintext').value = ptext
-			}
+            function decrypt(e) {
+                e.preventDefault()
+                let ctext = document.getElementById('ciphertext').value
+                let key = document.getElementById('key').value
+                let ptext = XXTEA.decryptFromBase64(ctext, key)
+                document.getElementById('plaintext').value = ptext
+            }
         </script>
         <script src="jquery-3.4.1.min.js"></script>
         <script async src="bootstrap.min.js"></script>
-		<link rel="stylesheet" href="bootstrap.min.css"/>
+        <link rel="stylesheet" href="bootstrap.min.css"/>
         <link rel="stylesheet" href="bootstrap.bundle.min.js"/>
-        <style>
-.jumbotron {
-    background-color: #b1b1b1;
-    color: white;
-}
-:root {
-  --input-padding-x: 1.5rem;
-  --input-padding-y: 0.75rem;
-}
-
-.image {
-  min-height: 100vh;
-}
-
-.bg-image {
-  background-image: url('unsplash-1554936970-e49a373f6967.jpeg') /*url('https://source.unsplash.com/n56WptG3O9M/600x1200')*/;
-  background-size: cover;
-  background-position: center;
-}
-
-.party-heading {
-  font-weight: 300;
-}
-
-.btn-block {
-  font-size: 0.9rem;
-  letter-spacing: 0.05rem;
-  padding: 0.75rem 1rem;
-  border-radius: 2rem;
-}
-
-.form-label-group {
-  position: relative;
-  margin-bottom: 1rem;
-}
-
-.form-label-group>input,
-.form-label-group>label {
-  padding: var(--input-padding-y) var(--input-padding-x);
-  height: auto;
-  border-radius: 2rem;
-}
-
-.form-label-group>label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  margin-bottom: 0;
-  /* Override default `<label>` margin */
-  line-height: 1.5;
-  color: #495057;
-  cursor: text;
-  /* Match the input under the label */
-  border: 1px solid transparent;
-  border-radius: .25rem;
-  transition: all .1s ease-in-out;
-}
-
-.form-label-group input::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input:-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-moz-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::placeholder {
-  color: transparent;
-}
-
-.form-label-group input:not(:placeholder-shown) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-  padding-bottom: calc(var(--input-padding-y) / 3);
-}
-
-.form-label-group input:not(:placeholder-shown)~label {
-  padding-top: calc(var(--input-padding-y) / 3);
-  padding-bottom: calc(var(--input-padding-y) / 3);
-  font-size: 12px;
-  color: #777;
-}
-
-/* Fallback for Edge
--------------------------------------------------- */
-
-@supports (-ms-ime-align: auto) {
-  .form-label-group>label {
-    display: none;
-  }
-  .form-label-group input::-ms-input-placeholder {
-    color: #777;
-  }
-}
-
-/* Fallback for IE
--------------------------------------------------- */
-
-@media all and (-ms-high-contrast: none),
-(-ms-high-contrast: active) {
-  .form-label-group>label {
-    display: none;
-  }
-  .form-label-group input:-ms-input-placeholder {
-    color: #777;
-  }
-}
-        </style>
+        <link rel="stylesheet" href="main.css"/>
     </head>
 
     <body>
@@ -155,7 +41,7 @@
                       <div class="jumbotron">
                         <h1>XXX-TEA Party</h1>
                         <h2>Open Source Encryption for Humans</h2>
-                        <p><img width="100%" src="../XXTEA-cipher-algorithm-diagram-cc-AloisMahdal.png"></p>
+                        <p><img width="100%" src="XXTEA-cipher-algorithm-diagram-cc-AloisMahdal.png"></p>
                         <p><a class="btn" data-toggle="collapse" data-target="#jumbodetails">Expand details &raquo;</a></p>
                         <div id="jumbodetails" class="collapse-group collapse">
                             <h2>Simple browser encryption &amp; decryption </h1>
@@ -177,9 +63,9 @@
                         </div><div class="form-label-group">
                             <textarea rows="10" class="form-control" id="plaintext" placeholder="Text to encrypt goes here"></textarea>
                         </div><div class="form-label-group">
-                            <button id="btnencrypt" onClick="encrypt()" class="btn btn-lg btn-primary btn-block text-uppercase font-weight-bold mb-2" type="submit">Encrypt (above)</button>
+                            <button id="btnencrypt" onClick="encrypt(event)" class="btn btn-lg btn-primary btn-block text-uppercase font-weight-bold mb-2" type="submit">Encrypt (above)</button>
                         </div><div class="form-label-group">
-                            <button id="btndecrypt" onClick="decrypt()" class="btn btn-lg btn-secondary btn-block text-uppercase font-weight-bold mb-2" type="submit">Decrypt (below)</button>
+                            <button id="btndecrypt" onClick="decrypt(event)" class="btn btn-lg btn-secondary btn-block text-uppercase font-weight-bold mb-2" type="submit">Decrypt (below)</button>
                         </div><div class="form-label-group">
                             <textarea class="form-control" id="ciphertext" placeholder="Encrypted text here"></textarea>
                         </div>
